# pvr.mythtv

./: .gitignore  CMakeLists.txt
debian/: changelog.in  control  copyright  rules
pvr.mythtv/: addon.xml  changelog.txt
pvr.mythtv/resources/language/French (Canada)/: strings.po
src/: avinfo.cpp  categories.cpp  client.cpp  client.h  demux.cpp  demux.h  fileOps.h  pvrclient-mythtv.h
src/cppmyth/: MythScheduleManager.h
src/demuxer/: tsDemuxer.h
